# gnome-builder

./: configure.ac  meson.build  meson_options.txt
contrib/pnl/: Makefile.am  pnl-bin.c  pnl-bin.h  pnl-child-property-action.c  pnl-child-property-action.h  pnl-dock-bin-edge-private.h  pnl-dock-bin-edge.c  pnl-dock-bin.c  pnl-dock-bin.h  pnl-dock-item.c  pnl-dock-item.h  pnl-dock-manager.h  pnl-dock-overlay-edge.c  pnl-dock-overlay-edge.h  pnl-dock-overlay.c  pnl-dock-overlay.h  pnl-dock-paned-private.h  pnl-dock-paned.c  pnl-dock-paned.h  pnl-dock-revealer.c  pnl-dock-revealer.h  pnl-dock-stack.c  pnl-dock-stack.h  pnl-dock-transient-grab.h  pnl-dock-types.h  pnl-dock-widget.c  pnl-dock-widget.h  pnl-dock-window.c  pnl-dock-window.h  pnl-multi-paned.c  pnl-multi-paned.h  pnl-tab-private.h  pnl-tab-strip.c  pnl-tab-strip.h  pnl-tab.c  pnl-tab.h  pnl-util-private.h  pnl-util.c  pnl.h
data/gtk/: menus.ui
data/shortcuts/: default.keytheme  emacs.keytheme  vim.keytheme
data/theme/: Adwaita-panels.css  (+1 more)
libide/: Makefile.am  ide-context.c  ide.h  libide.gresource.xml  meson.build
plugins/: Makefile.am  meson.build
plugins/meson-templates/meson_templates/resources/: meson.build
plugins/meson-templates/meson_templates/resources/po/: POTFILES
plugins/meson-templates/meson_templates/resources/src/: application.c  application.h  hello-window.c  hello-window.h  hello-window.ui  hello.src.gresource.xml  helloWindow.js  hello_window.py  main.c  main.js  main.py  main.vala  meson.build  python-meson.build  window.c  window.h  window.ui
po/: POTFILES.in  de.po
(+87 files in other folders)
